Removed -Prun-its because it is not used now