@@ -351,20 +351,6 @@
             </build>
         </profile>
         <profile>
-            <id>run-its</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>-javaagent:${jacoco.agent.path}=destfile=${jacoco.file.path} -XX:MaxPermSize=128m</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>sonatype-deploy</id>
             <distributionManagement>
                 <repository>
